content/nomad/v0.11.x/content/docs/commands/acl/index.mdx
---
layout: docs
page_title: 'Commands: acl'
sidebar_title: acl
description: |
  The acl command is used to interact with ACL policies and tokens.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# Command: acl

The `acl` command is used to interact with ACL policies and tokens. Learn more
about using Nomad's ACL system in the [Secure Nomad with Access Control
guide][secure-guide].

## Usage

Usage: `nomad acl <subcommand> [options]`

Run `nomad acl <subcommand> -h` for help on that subcommand. The following
subcommands are available:

- [`acl bootstrap`][bootstrap] - Bootstrap the initial ACL token
- [`acl policy apply`][policyapply] - Create or update ACL policies
- [`acl policy delete`][policydelete] - Delete an existing ACL policies
- [`acl policy info`][policyinfo] - Fetch information on an existing ACL policy
- [`acl policy list`][policylist] - List available ACL policies
- [`acl token create`][tokencreate] - Create new ACL token
- [`acl token delete`][tokendelete] - Delete an existing ACL token
- [`acl token info`][tokeninfo] - Get info on an existing ACL token
- [`acl token self`][tokenself] - Get info on self ACL token
- [`acl token update`][tokenupdate] - Update existing ACL token

[bootstrap]: /docs/commands/acl/bootstrap
[policyapply]: /docs/commands/acl/policy-apply
[policydelete]: /docs/commands/acl/policy-delete
[policyinfo]: /docs/commands/acl/policy-info
[policylist]: /docs/commands/acl/policy-list
[tokencreate]: /docs/commands/acl/token-create
[tokenupdate]: /docs/commands/acl/token-update
[tokendelete]: /docs/commands/acl/token-delete
[tokeninfo]: /docs/commands/acl/token-info
[tokenself]: /docs/commands/acl/token-self
[secure-guide]: https://learn.hashicorp.com/nomad/acls/fundamentals
