content/nomad/v1.6.x/content/docs/commands/acl/index.mdx
---
layout: docs
page_title: 'Commands: acl'
description: |
  The acl command is used to interact with ACL policies and tokens.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-11-20T10:31:44-06:00
# END AUTO GENERATED METADATA
---

# Command: acl

The `acl` command is used to interact with ACL policies and tokens. Learn more
about using Nomad's ACL system in the [Secure Nomad with Access Control
guide][secure-guide].

In [federated][] clusters, all ACL updates are forwarded to the
[`authoritative_region`][] and replicated to non-authoritative regions. This
requires that ACLs have been bootstrapped in the authoritative region.

## Usage

Usage: `nomad acl <subcommand> [options]`

Run `nomad acl <subcommand> -h` for help on that subcommand. The following
subcommands are available:

- [`acl bootstrap`][bootstrap] - Bootstrap the initial ACL token
- [`acl auth-method create`][authmethodcreate] - Create a new ACL auth method
- [`acl auth-method delete`][authmethoddelete] - Delete an existing ACL auth method
- [`acl auth-method info`][authmethodinfo] - Fetch information on an existing ACL auth method
- [`acl auth-method list`][authmethodlist] - List available ACL auth methods
- [`acl auth-method update`][authmethodupdate] - Update existing ACL auth method
- [`acl binding-rule create`][bindingrulecreate] - Create a new ACL binding rule
- [`acl binding-rule delete`][bindingruledelete] - Delete an existing ACL binding rule
- [`acl binding-rule info`][bindingruleinfo] - Fetch information on an existing ACL binding rule
- [`acl binding-rule list`][bindingrulelist] - List available ACL binding rules
- [`acl binding-rule update`][bindingruleupdate] - Update existing ACL binding rule
- [`acl policy apply`][policyapply] - Create or update ACL policies
- [`acl policy delete`][policydelete] - Delete an existing ACL policies
- [`acl policy info`][policyinfo] - Fetch information on an existing ACL policy
- [`acl policy list`][policylist] - List available ACL policies
- [`acl role create`][rolecreate] - Create a new ACL role
- [`acl role delete`][roledelete] - Delete an existing ACL role
- [`acl role info`][roleinfo] - Get info on an existing ACL role
- [`acl role list`][rolelist] - List available ACL roles
- [`acl role update`][roleupdate] - Update existing ACL role
- [`acl token create`][tokencreate] - Create new ACL token
- [`acl token delete`][tokendelete] - Delete an existing ACL token
- [`acl token info`][tokeninfo] - Get info on an existing ACL token
- [`acl token list`][tokenlist] - List available ACL tokens
- [`acl token self`][tokenself] - Get info on self ACL token
- [`acl token update`][tokenupdate] - Update existing ACL token

[bootstrap]: /nomad/docs/commands/acl/bootstrap
[authmethodcreate]: /nomad/docs/commands/acl/auth-method/create
[authmethoddelete]: /nomad/docs/commands/acl/auth-method/delete
[authmethodinfo]: /nomad/docs/commands/acl/auth-method/info
[authmethodlist]: /nomad/docs/commands/acl/auth-method/list
[authmethodupdate]: /nomad/docs/commands/acl/auth-method/update
[bindingrulecreate]: /nomad/docs/commands/acl/binding-rule/create
[bindingruledelete]: /nomad/docs/commands/acl/binding-rule/delete
[bindingruleinfo]: /nomad/docs/commands/acl/binding-rule/info
[bindingrulelist]: /nomad/docs/commands/acl/binding-rule/list
[bindingruleupdate]: /nomad/docs/commands/acl/binding-rule/update
[policyapply]: /nomad/docs/commands/acl/policy/apply
[policydelete]: /nomad/docs/commands/acl/policy/delete
[policyinfo]: /nomad/docs/commands/acl/policy/info
[policylist]: /nomad/docs/commands/acl/policy/list
[tokencreate]: /nomad/docs/commands/acl/token/create
[tokenupdate]: /nomad/docs/commands/acl/token/update
[tokendelete]: /nomad/docs/commands/acl/token/delete
[tokeninfo]: /nomad/docs/commands/acl/token/info
[tokenlist]: /nomad/docs/commands/acl/token/list
[tokenself]: /nomad/docs/commands/acl/token/self
[rolecreate]: /nomad/docs/commands/acl/role/create
[roleupdate]: /nomad/docs/commands/acl/role/update
[roledelete]: /nomad/docs/commands/acl/role/delete
[roleinfo]: /nomad/docs/commands/acl/role/info
[rolelist]: /nomad/docs/commands/acl/role/list
[secure-guide]: /nomad/tutorials/archive/access-control
[federated]: /nomad/tutorials/manage-clusters/federation
[`authoritative_region`]: /nomad/docs/configuration/server#authoritative_region
